# logikbench

./: .gitignore  LICENSE  README.md  benchmarks.csv  pyproject.toml
.github/workflows/: lint.yml  regression.yml  wheels.yml
docs/: benchmarks.csv
examples/baremetal/: main.py  make.py  vivado_template.j2  yosys_template.j2
examples/sc/: .gitignore  gen_verilog_wrapper.py  make.py  parse_verilog_ports.py  synth_const.xdc  verilog_parsing_utils.py
examples/sc_script/: main.py
examples/synthesis/: make.py  vivado_template.j2  yosys_template.j2
examples/yosys_script/: main.py
logicbenchy/: cli.py  design.py  lb.py
logicbenchy/add/: add.py
logicbenchy/aes/: aes.py
logicbenchy/aes/rtl/: aes_inv_sbox.v
logicbenchy/ethmac/: README.md
logicbenchy/fir/: fir.py
logicbenchy/mult/: LICENSE  mult.py
logicbenchy/oh_mux/: README.md
logicbenchy/uart/: README.md
logikbench/: __init__.py  lb.py
logikbench/add/: README.md  add.py
logikbench/add/rtl/: add.v
logikbench/aes/rtl/: aes.v  aes_rcon.v
logikbench/apps/: lb.py  syn.py
logikbench/arithmetic/: README.md  __init__.py
logikbench/arithmetic/abs/: abs.py
logikbench/arithmetic/absdiff/: absdiff.py
logikbench/arithmetic/absdiffs/: absdiffs.py
logikbench/arithmetic/add/: add.py
logikbench/arithmetic/addsub/: addsub.py
logikbench/arithmetic/cmp/: cmp.py
logikbench/arithmetic/counter/: counter.py
logikbench/basic/: README.md  __init__.py
logikbench/blocks/: README.md  __init__.py
logikbench/epfl/: README.md  __init__.py
logikbench/memory/: README.md  __init__.py
logikbench/mul/: README.md  mul.py
logikbench/muladd/: README.md  muladd.py
logikbench/muls/: muls.py
logikbench/mult/: mult.py
logikbench/mults/: README.md  mults.py
logikbench/oh_mux/: oh_mux.py
logikbench/oh_parity/: oh_parity.py
logikbench/ramsdp/: LICENSE
logikbench/ramsp/: README.md  ramsp.py
results/: README.md
rtlbench/: __init__.py  cli.py  main.py  make.py
rtlbench/aes/: README.md
rtlbench/fir/: LICENSE
rtlbench/mult/: README.md  mult.py
rtlbench/oh_mux/: README.md
rtlbench/oh_parity/: README.md
rtlbench/picorv32/: README.md
rtlbench/uart/: README.md
scripts/: gen_basic.py  gen_class.py  gen_classes.py  gen_readme.py  populate_bench.py  template.py.j2
tests/: common.py  template.ys.j2  test_artihmetic.py  test_basic.py  test_blocks.py  test_compile.py  test_hello.py  test_icarus.py  test_memory.py  test_setup.py  test_yosys.py
(+318 files in other folders)
