[build-system]
requires = ["setuptools >= 61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "logicbenchy"
authors = [{name = "Zero ASIC"}]
description = "Technology agnostic hardware benchmark suite"
readme = "README.md"
urls = {Homepage = "https://github.com/zeroasiccorp/logicbenchy"}
requires-python = ">= 3.12"
license = {file = "LICENSE"}
dependencies = ["siliconcompiler >= 0.32.3"]
dynamic = ['version']

[project.scripts]
lb = "logicbenchy.lb:main"

[tool.setuptools.dynamic]
version = {attr = "logicbenchy.__version__"}

[tool.pytest.ini_options]
testpaths = "tests"
timeout = "60"

[project.optional-dependencies]
dev = [
    "flake8 >= 5.0.0",
    "pytest >= 6.2.4",
    "pytest-timeout >= 2.1.0"
]
