[build-system]
requires = ["setuptools >= 61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "logikbench"
authors = [{name = "Zero ASIC"}]
description = "Tech agnostic RTL benchmark suite"
readme = "README.md"
urls = {Homepage = "https://github.com/zeroasiccorp/logikbench"}
requires-python = ">= 3.12"
license = {file = "LICENSE"}
dependencies = ["siliconcompiler >= 0.32.3"]
dynamic = ['version']

[project.scripts]
lb = "logikbench.lb:main"

[tool.setuptools.dynamic]
version = {attr = "logikbench.__version__"}

[tool.pytest.ini_options]
testpaths = "tests"
timeout = "60"

[project.optional-dependencies]
test = [
    "flake8 >= 5.0.0",
    "pytest >= 6.2.4",
    "pytest-timeout >= 2.1.0"
]
